--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../dir/styles.css">
   <title>Tip Calculator</title>
 </head>
 <body>
   <main>
     <header>
-      <h1>SPLITTER</h1>
+      <h1>SPLI <br> TTER</h1>
     </header>
+
     <section>
 
       <article class="selection">
         <form >
           <div class="selection__entry">
+            <label for="">Bill</label> <br>
             <img class="selection__icon" src="images/icon-dollar.svg" alt="dollar image">
-            <input type="number" class="selection__bill">
+            <input type="number" class="selection__bill" placeholder="142.50">
           </div>
         </form>
       </article>
